Added crud support for services and versions
